<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/logoTop"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.168"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            style="@style/blueBtn"
            android:onClick="click"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writePw"
            android:layout_marginTop="36dp"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logo_blue"
            app:layout_constraintTop_toTopOf="@id/logoTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/writeId"
            style="@style/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="36dp"
            android:hint="@string/writeId"/>

        <EditText
            android:id="@+id/writePw"
            style="@style/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writeId"
            android:layout_marginTop="20dp"
            android:hint="@string/writePw"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp">
            <TextView
                style="@style/black13400"
                android:text="@string/isNoId"/>
            <TextView
                android:id="@+id/registerBtn"
                android:onClick="click"
                style="@style/blue13400"
                android:text="@string/register"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>
            <TextView
                style="@style/black13400"
                android:text="@string/go"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>