<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="info"
            type="com.example.lost_android.ui.register.InfoFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/requestTop"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.248"/>

        <ImageView
            android:id="@+id/backBtn"
            android:onClick="@{info::click}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="13dp"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/backTxt"
            android:onClick="@{info::click}"
            style="@style/text13400"
            android:text="@string/back"
            android:textColor="@color/mainColor"
            app:layout_constraintStart_toEndOf="@id/backBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/backBtn"
            app:layout_constraintBottom_toBottomOf="@id/backBtn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtn"
            style="@style/registerBtn"
            android:onClick="@{info::click}"
            android:text="@string/next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/requestIdAndPw"
            style="@style/text16500"
            android:textColor="@color/black"
            android:text="@string/requestIdAndPw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/requestTop"/>

        <EditText
            android:id="@+id/writeId"
            style="@style/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestIdAndPw"
            android:layout_marginTop="85dp"
            android:hint="@string/writeId"/>

        <EditText
            android:id="@+id/writePw"
            style="@style/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writeId"
            android:layout_marginTop="37dp"
            android:hint="@string/writePw"/>

        <EditText
            android:id="@+id/writeRePw"
            style="@style/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writePw"
            android:layout_marginTop="17dp"
            android:hint="@string/writeRePw"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>