<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="address"
            type="com.example.lost_android.ui.register.AddressFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/requestTop"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.248"/>

        <ImageView
            android:id="@+id/backBtn"
            android:onClick="@{address::click}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="13dp"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/backTxt"
            android:onClick="@{address::click}"
            style="@style/blue13400"
            android:text="@string/back"
            app:layout_constraintStart_toEndOf="@id/backBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/backBtn"
            app:layout_constraintBottom_toBottomOf="@id/backBtn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/finishBtn"
            style="@style/blueBtn"
            android:onClick="@{address::click}"
            android:text="@string/finish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/requestAddress"
            style="@style/black16500"
            android:text="@string/requestAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestTop"/>

        <EditText
            android:id="@+id/writeAddress"
            style="@style/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestAddress"
            android:layout_marginTop="99dp"
            android:hint="@string/writeAddress"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/findBtn"
            style="@style/blue14500"
            android:onClick="@{address::click}"
            android:text="@string/findAddress"
            app:layout_constraintEnd_toEndOf="@id/writeAddress"
            app:layout_constraintTop_toTopOf="@id/writeAddress"
            app:layout_constraintBottom_toBottomOf="@id/writeAddress"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>