<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="entryFragment"
            type="com.example.lost_android.ui.component.entry.EntryFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="24dp">


            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/ic_back"
                android:onClick="@{entryFragment::click}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/backTxt"
                style="@style/text13400"
                android:layout_marginStart="8dp"
                android:onClick="@{entryFragment::click}"
                android:text="@string/back"
                android:textColor="@color/mainColor"
                app:layout_constraintBottom_toBottomOf="@id/backBtn"
                app:layout_constraintStart_toEndOf="@id/backBtn"
                app:layout_constraintTop_toTopOf="@id/backBtn" />

            <TextView
                android:id="@+id/titleTxt"
                style="@style/text22700"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/lostEntry"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/backBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/backBtn" />

            <TextView
                android:id="@+id/imageEntry"
                style="@style/text14500"
                android:layout_marginTop="31dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/lostImageEntry"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/backBtn"
                app:layout_constraintTop_toBottomOf="@id/backBtn" />

            <View
                android:id="@+id/imageEntryHolder"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_entry_image_holder"
                app:layout_constraintTop_toBottomOf="@id/imageEntry" />

            <ImageView
                android:id="@+id/icImageEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_entry_image"
                app:layout_constraintBottom_toBottomOf="@id/imageEntryHolder"
                app:layout_constraintEnd_toEndOf="@id/imageEntryHolder"
                app:layout_constraintStart_toStartOf="@id/imageEntryHolder"
                app:layout_constraintTop_toTopOf="@id/imageEntryHolder" />

            <TextView
                android:id="@+id/imageEntryTxt"
                style="@style/text14500"
                android:layout_marginTop="16dp"
                android:text="@string/lostImageEntry"
                app:layout_constraintEnd_toEndOf="@id/imageEntryHolder"
                app:layout_constraintStart_toStartOf="@id/imageEntryHolder"
                app:layout_constraintTop_toBottomOf="@id/icImageEntry" />

            <TextView
                android:id="@+id/title"
                style="@style/text14500"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/title"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/backBtn"
                app:layout_constraintTop_toBottomOf="@id/imageEntryHolder" />

            <EditText
                android:id="@+id/writeTitle"
                style="@style/entryText"
                android:layout_marginTop="12dp"
                android:hint="@string/writeTitle"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/description"
                style="@style/text14500"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/description"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/backBtn"
                app:layout_constraintTop_toBottomOf="@id/writeTitle" />

            <EditText
                android:id="@+id/writeDescription"
                style="@style/entryText"
                android:layout_marginTop="12dp"
                android:hint="@string/writeDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/chooseLocation"
                style="@style/text14500"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/chooseLocation"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/backBtn"
                app:layout_constraintTop_toBottomOf="@id/writeDescription" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chooseLocationBtn"
                style="@style/blueBtn"
                android:layout_marginTop="12dp"
                android:text="@string/chooseLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chooseLocation" />

            <TextView
                android:id="@+id/setTag"
                style="@style/text14500"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/setTag"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/backBtn"
                app:layout_constraintTop_toBottomOf="@id/chooseLocationBtn" />

            <TextView
                android:id="@+id/addTagBtn"
                style="@style/text12700"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_tag_btn"
                android:fontFamily="@font/pretendard_bold"
                android:paddingHorizontal="13.5dp"
                android:paddingVertical="6dp"
                android:text="@string/addTag"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/backBtn"
                app:layout_constraintTop_toBottomOf="@id/setTag" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tagList"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@id/addTagBtn"
                app:layout_constraintStart_toEndOf="@id/addTagBtn"
                app:layout_constraintTop_toTopOf="@id/addTagBtn" />


            <TextView
                android:id="@+id/securityService"
                style="@style/text14500"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/securityService"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/backBtn"
                app:layout_constraintTop_toBottomOf="@id/addTagBtn" />

            <Switch
                android:id="@+id/isSafeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:switchPadding="8dp"
                android:thumb="@drawable/bg_safe_service_thumb"
                android:track="@drawable/bg_safe_service"
                app:layout_constraintBottom_toBottomOf="@id/securityService"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/securityService" />

            <TextView
                android:id="@+id/whatSecurityService"
                style="@style/text13500"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/whatSecurityService"
                android:textColor="@color/mainColor"
                app:layout_constraintStart_toStartOf="@id/backBtn"
                app:layout_constraintTop_toBottomOf="@id/securityService" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/entryBtn"
                style="@style/registerBtn"
                android:layout_marginTop="168dp"
                android:text="@string/entry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/whatSecurityService" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>