<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="phone"
            type="com.example.lost_android.ui.register.PhoneFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/logoTop"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.168"/>

        <ImageView
            android:id="@+id/backBtn"
            android:onClick="@{phone::click}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="13dp"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/backTxt"
            android:onClick="@{phone::click}"
            style="@style/text13400"
            android:text="@string/back"
            android:textColor="@color/mainColor"
            app:layout_constraintStart_toEndOf="@id/backBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/backBtn"
            app:layout_constraintBottom_toBottomOf="@id/backBtn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtn"
            style="@style/registerBtn"
            android:onClick="@{phone::click}"
            android:text="@string/next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"/>
        
        <ImageView
            android:id="@+id/phoneLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_phone"
            app:layout_constraintTop_toTopOf="@id/logoTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/requestPhone"
            style="@style/text16500"
            android:text="@string/requestPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneLogo"
            android:layout_marginTop="24dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/writePhone"
            style="@style/editText"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestPhone"
            android:layout_marginTop="67dp"
            android:hint="@string/writePhone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendBtn"
            style="@style/text14500"
            android:onClick="@{phone::click}"
            android:text="@string/sendNumber"
            android:gravity="center_vertical|end"
            android:textColor="@color/mainColor"
            app:layout_constraintEnd_toEndOf="@id/writePhone"
            app:layout_constraintTop_toTopOf="@id/writePhone"
            app:layout_constraintBottom_toBottomOf="@id/writePhone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>